--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Search</title>
-    </head>
-    <body>
+﻿<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="favicon_KkF_icon.ico" />
+    <title>Google</title>
+    <link rel="stylesheet" href="Style1.css?version=44" />
+</head>
+<body>
+    <a class="link" id="link_images" href="images.html">Images</a>
+    <a class="link" href="advanced.html">Advanced</a>
+    <div>
+        <img src="google.jpg" alt="logo" />
         <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
+            <input class="searchbar" type="text" name="q"><br /><br />
+            <input class="button" id="button1" type="submit" value="Google Search">
+            <input class="button" id="button2" type="submit" value="I'm Feeling Lucky">
         </form>
-    </body>
+    </div>
+</body>
 </html>
